@@ -41,18 +41,28 @@ func (m *MetricSet) Fetch() (common.MapStr, error) {
 
 	// These values are optional and could also be calculated by Kibana
 	var totalFiles, totalSize, totalSizeFree, totalSizeUsed uint64
+	dict := map[string]bool{}
 
 	for _, fs := range fss {
-		fsStat, err := filesystem.GetFileSystemStat(fs)
+		stat, err := filesystem.GetFileSystemStat(fs)
 		if err != nil {
 			debugf("error fetching filesystem stats for '%s': %v", fs.DirName, err)
 			continue
 		}
+		logp.Debug("fsstat", "filesystem: %s total=%d, used=%d, free=%d", stat.Mount, stat.Total, stat.Used, stat.Free)
 
-		totalFiles += fsStat.Files
-		totalSize += fsStat.Total
-		totalSizeFree += fsStat.Free
-		totalSizeUsed += fsStat.Used
+		if _, ok := dict[stat.Mount]; ok {
+			// ignore filesystem with the same mounting point
+			continue
+		}
+
+		totalFiles += stat.Files
+		totalSize += stat.Total
+		totalSizeFree += stat.Free
+		totalSizeUsed += stat.Used
+
+		dict[stat.Mount] = true
+
 	}
 
 	return common.MapStr{
@@ -61,7 +71,7 @@ func (m *MetricSet) Fetch() (common.MapStr, error) {
 			"used":  totalSizeUsed,
 			"total": totalSize,
 		},
-		"count":       len(fss),
+		"count":       len(dict),
 		"total_files": totalFiles,
 	}, nil
 }
